syntax = "proto3";
import "modelcommon.proto";

package model;
option go_package="model";

enum Side {
    BUY =0;
    SELL=1;
}


enum OrderStatus {
    NONE =0;
    LIVE =1;
    FILLED =2;
    CANCELLED =3;
}


message Ref {
    int32 version = 1;
    string id = 2;
}

message Order{
    int32 version = 1;
    string id = 2;
    Side side = 3;
    Decimal64 quantity = 4;
    Decimal64 price = 5;
    int32 listingId = 6;
    Decimal64 remainingQuantity=7;
    Decimal64 tradedQuantity=8;
    Decimal64 avgTradePrice=9;
    OrderStatus status=10;
    OrderStatus targetStatus=11;
    Timestamp created=12;
    string ownerId=13;
    string originatorId=14;
    string originatorRef=15;
    Decimal64 lastExecQuantity = 16;
    Decimal64 lastExecPrice = 17;
    string    lastExecId = 18;
    Decimal64 exposedQuantity=19;
    string errorMessage=20;
    repeated Ref childOrdersRefs = 21;
    string rootOriginatorId=22;
    string rootOriginatorRef=23;
    string execParametersJson=24; 
    string destination=25;
}


